# skill-panel-demo

./: .pre-commit-config.yaml  Makefile  Procfile  README.md  compare_models_app.py  model_box_stats_app.py  model_table_app.py  pyproject.toml  regional _stats_app.py  regional_stats_app.py  requirements.txt  skill_app.py  time_series_app.py
assets/: stats_all.json  v0.0.parquet  v0.2.parquet  v1.2.parquet  v2.1.parquet  v2.2.parquet  world_oceans_final.json
requirements/: requirements.txt
seareport_skill/: __init__.py  settings.py
utils/: hists.py  taylor.py
