[tool.poetry]
name = "skill-panel"
version = "0.1.0"
description = ""
authors = ["tomsail <saillour.thomas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
bokeh = "*"
geopandas = "*"
geoviews = "*"
holoviews = "*"
hvplot = "*"
numpy = "*"
pandas = "*"
panel = "*"
shapely = "*"
thalassa = "*"
watchfiles = "*"
ipykernel = "*"
geodatasets = "*"
pyextremes = "^2.3.2"
seastats = {git = "https://github.com/seareport/seastats"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
